--- a/Сайтик/fonts.css
+++ b/Сайтик/fonts.css
@@ -1,95 +1,102 @@
-body {
-    font-family: 'Montserrat', sans-serif;
-    color: #fff;
-  }
+* {
+  font-family: 'Montserrat', sans-serif;
+}
   
   .regular_11{
     font-size: 11px;
-  font-weight: 400;
+    font-weight: 400;
   }
 
   .regular_12{
     font-size: 12px;
-  font-weight: 400;
+    font-weight: 400;
   }
 
   .regular_13{
     font-size: 13px;
-  font-weight: 400;
+    font-weight: 400;
   }
 
   .regular_14{
     font-size: 14px;
-  font-weight: 400;
+    font-weight: 400;
   }
 
   .regular_15{
     font-size: 15px;
-  font-weight: 400;
+    font-weight: 400;
   }
 
   .regular_16{
     font-size: 16px;
-  font-weight: 400;
+    font-weight: 400;
+    color:#2E363E
   }
 
   .regular_18{
     font-size: 18px;
-  font-weight: 400;
+    font-weight: 400;
   }
 
   .regular_21{
     font-size: 21px;
-  font-weight: 400;
+    font-weight: 400;
   }
 
   .regular_24{
     font-size: 24px;
-  font-weight: 400;
+    font-weight: 400;
   }
 
   .medium_18{
     font-size: 18px;
-  font-weight: 500;
+    font-weight: 500;
+    color:#2E363E
   }
 
   .medium_21{
     font-size: 21px;
-  font-weight: 500;
+    font-weight: 500;
   }
 
   .medium_24{
     font-size: 24px;
-  font-weight: 500;
+    font-weight: 500;
   }
 
   .medium_30{
     font-size: 30px;
-  font-weight: 500;
+    font-weight: 500;
   }
 
   .h2{
     font-size: 48px;
-  font-weight: 500;
+    font-weight: 500;
+  }
+
+  .h2{
+    font-size: 48px;
+    font-weight: 500;
   }
 
   .bold_20{
     font-size: 20px;
-  font-weight: 700;
+    font-weight: 700;
   }
 
   .bold_24{
     font-size: 24px;
-  font-weight: 700;
+    font-weight: 700;
+    color:#2E363E
   }
 
   .bold_36{
     font-size: 36px;
-  font-weight: 700;
+    font-weight: 700;
   }
 
   .h1{
     font-size: 48px;
-  font-weight: 700;
+    font-weight: 700;
   }
   
