--- a/Сайтик/main.css
+++ b/Сайтик/main.css
@@ -9,10 +9,12 @@
   padding: 0;
 }
 
-html, body {
+.html, body {
   font-family: 'Montserrat', sans-serif;
   color: #fff;
+  overflow-x:hidden;
 }
+
 
 .container {
   width: 61.46%;
@@ -43,6 +45,11 @@ html, body {
   align-items: center;
   width: 100%;
   height: 119px;
+  color:#fff;
+}
+
+.logo{
+  white-space: pre;
 }
 
 .header_info{
@@ -178,7 +185,7 @@ html, body {
   align-items: center;
   width: 100%;
   background: #081130;
-  height: 1352px;
+  height: fit-content;
   position: relative;
   overflow: hidden;
 }
@@ -188,6 +195,7 @@ html, body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  height: 1352px;
   width: 100%;
 }
 
@@ -197,7 +205,7 @@ html, body {
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-end;
-  width: 485px;
+  width: 490px;
   height: 600px;
   gap: 24px;
   margin-left: 60%;
@@ -209,7 +217,7 @@ html, body {
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 830px;
+  height: 860px;
   background: #fff;
   color:#2E363E;
   gap: 15%;
@@ -219,9 +227,9 @@ html, body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: center;
   width: 580px;
-  height: 637px;
+  height: fit-content;
   gap: 50px;
   padding-left: 10%;
 }
@@ -253,9 +261,7 @@ html, body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: flex-start;
-  width: 100vw;
-  height: 830px;     
+  justify-content: flex-start;     
 }
 
 .about_img{
@@ -271,7 +277,7 @@ html, body {
   flex-direction: column;
   position: absolute;
   top: 70%;
-  left: 30%;
+  left: 40%;
   transform: translate(-100%, -90%); 
   gap: 0px;
 }
@@ -382,11 +388,12 @@ html, body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 1300px;
+  height: 1100px;
   background: #081130;
   position: relative;
   overflow: hidden;
   gap: 80px;
+  margin-bottom: 5%;
 }
 
 .contacts_card {
@@ -474,4 +481,14 @@ html, body {
   display: flex;
   justify-content: center;
   gap: 24px;
+}
+
+
+.hero__btn2:hover,
+.contacts__btn2:hover {
+  transform: scale(1.03);
+  background-color: #2e363e;
+  color: white;
+  cursor: pointer;
+  transition: all 0.2s ease;
 }
