--- a/Сайтик/overlay.css
+++ b/Сайтик/overlay.css
@@ -8,7 +8,7 @@
   .overlay-0 {
     width: 100%;
     display: flex;
-    bottom: -5%;
+    bottom: 0;
   }
 
   .overlay-1 {
@@ -71,13 +71,13 @@
   .overlay-8 {
     width: 100%;
     display: flex;
-    top: -5%;
+    top: 0;
   }
 
   .overlay-9 {
     width: 100%;
     display: flex;
-    bottom: -5%;
+    bottom: 0;
   }
 
   .overlay-10 {
@@ -98,7 +98,7 @@
   }
 
   .overlay-12 {
-    top: 25vw;
+    top: 15vw;
     left: 13vw;
     width: 106.67px;
     height: 111.52px;
@@ -107,7 +107,7 @@
   }
 
   .overlay-13 {
-    top: 48vw;
+    top: 38vw;
     right: 10vw;
     width: 146.55px;
     height: 153.21px;
@@ -116,7 +116,7 @@
   }
 
   .overlay-14 {
-    top: 48vw;
+    top: 38vw;
     left: 10vw;
     width: 167.13px;
     height: 171.29px;
@@ -125,7 +125,7 @@
   }
 
   .overlay-15 {
-    top: 25vw;
+    top: 15vw;
     right: 12vw;
     width: 152.18px;
     height: 155.97px;
@@ -134,10 +134,12 @@
   }
 
   .mockup {
-    left: 6%;
-    top: 20%;
-    width: 1090px;
-    height: 1034px;
+    display:flex;
+    margin-left: -60%;
+    bottom: -3%;
+    width: 50%;
+    height: auto;
+    max-width: 1090px;
   }
 
   .keks{
