--- a/Сайтик/main.css
+++ b/Сайтик/main.css
@@ -26,6 +26,12 @@
   margin: 0 auto;
 }
 
+.container_3{
+  width:100%;
+  margin-left: 60%;
+  margin-right: 30%;
+}
+
 .bg-header-hero {
   background-image: url('images/bg.png');
   background-size: cover; 
@@ -193,7 +199,7 @@
 .block3 {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   height: 1352px;
   width: 100%;
@@ -204,11 +210,10 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: flex-end;
+  justify-content: flex-start;
   width: 490px;
   height: 600px;
   gap: 24px;
-  margin-left: 60%;
 }
 
 .about{
@@ -492,3 +497,5 @@
   cursor: pointer;
   transition: all 0.2s ease;
 }
+
+
